--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           printf "$(go version)\n"
           printf "\n\ngo environment:\n\n"
-          go get -u github.com/lesismal/nbio/...
+          go get -u github.com/soar4/nbio/...
           go env
           echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
       - name: go test
